[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
axum = { git = "https://github.com/tokio-rs/axum" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.11", features = ["util", "timeout"] }
tower-http = { version = "0.2.0", features = ["fs","add-extension", "trace"] }
reqwest = { version = "0.11", default-features=false,features = ["json","blocking"] }
futures = "0.3.19"
askama = "0.10"
mime_guess = "2.0.3"
rust-embed="6.3.0"
structopt = "0.3"
tracing = "0.1.29"
tracing-subscriber = { version="0.3.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
libsqlite3-sys = { version = "*", features = ["bundled"] }
jsonwebtoken = "7.2.0"
bcrypt = "0.9.0"
diesel_migrations = "1.4.0"
hyper = { version = "0.14.14", features = ["server"] }
webdav-handler = { version="0.2.0", default-features = false, features = ["hyper"] }
download_rs = {version="0.2.0",features=["async_download"]}
openssl = { version = "0.10.32", features = ["vendored"] }


[patch.crates-io]
webdav-handler = { git = 'https://github.com/miquels/webdav-handler-rs',default-features = false, features = ["hyper"] }
webdav-handler_win = { git = 'https://github.com/ykxVK8yL5L/webdav-handler-rs', package = 'webdav-handler', branch = 'win',default-features = false, features = ["hyper"] }


[dependencies.diesel]
version = "1.4.8"
features = ["sqlite", "r2d2", "chrono"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
